# flask_alice

./: .gitignore  README.md  pyproject.toml
.github/workflows/: github-pages-deploy.yml  pypi-deploy.yml  pytest-check.yml
src/: example_server.py
src/flask_alice/: __init__.py  classes.py
src/flask_alice/classes/: __init__.py  application.py  communication.py
tests/: test_core.py
